--- a/foundry.toml
+++ b/foundry.toml
@@ -2,13 +2,4 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
-remappings = [
-  "chainlink-brownie-contracts/=lib/chainlink-brownie-contracts/",
-  "openzeppelin-contracts/=lib/openzeppelin-contracts/"
-]
-
-# Optional but recommended
-solc_version = "0.8.20"
-optimizer = true
-optimizer_runs = 200
+solc = "0.8.20"
